--- a/css/media.css
+++ b/css/media.css
@@ -53,8 +53,14 @@
     padding-right: 50px;
   }
   #third .item-wrap .item .item1{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
     align-items: flex-end;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
     width: 50%;
     height: 500px;
@@ -72,8 +78,14 @@
     z-index: 100
   }
   #third .item-wrap .item2{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     align-items: flex-start;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     justify-content: flex-start;
     width: 100%;
     height: 500px;
@@ -266,8 +278,14 @@
     min-height: 0;
   }
   #six .info-wrap .info-img{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
     align-items: flex-end;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
   }
   #six .info-wrap .info-text{
@@ -415,17 +433,33 @@
   #third .item-wrap{
     margin-top: 100px;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
    #third .item-wrap .item{
     width: auto;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
   #third .item-wrap .item .item1{
@@ -473,9 +507,18 @@
     margin-top: 230px;
     width: 100%;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
   #third .item-wrap .item2 .item2-txt{
@@ -520,8 +563,14 @@
     display: block;
   }
   #six .info-wrap .info-img{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
   #six .info-wrap .info-img img{
@@ -746,6 +795,8 @@
     padding-right: 50px;
   }
   #footer .footer-wrap{
+    -webkit-box-orient: vertical;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
   #footer .footer-wrap .mobile-foot-logo img{
