--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body{
   max-width: 1700px;
   margin: 0 auto;
 }
+
+input:focus{ outline: none;}
+button:focus{ outline: none;}
+
 br .pc{
   display: none;
 }
@@ -277,7 +281,7 @@ input{ display: none ;}
 #main-content{
   word-break: keep-all;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   max-height: 1100px;
   margin: 0 auto;
 }
@@ -285,7 +289,7 @@ input{ display: none ;}
 #main-content .swiper-container{
   width: 100%;
   height: 100%;
-  padding-top: 200px;
+  padding-top: 150px;
 }
 
 #main-content .swiper-slide{
