--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,17 @@ body{
 input:focus{ outline: none;}
 button:focus{ outline: none;}
 
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="search"],
+input[type="image"],
+input[type="tel"],
+button,
+select,
+textarea{-webkit-border-radius:0;-webkit-appearance:none;}
+
+
 br .pc{
   display: none;
 }
